<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
   <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createContact"
            android:textSize="10pt"></TextView>


        <EditText
            android:id="@+id/EditTextFirstName"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextLastName"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

       <EditText
            android:id="@+id/EditTextPhoneNumber"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
       
       <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
        <EditText
            android:id="@+id/EditTextLine1"
            android:layout_height="wrap_content"
            android:hint="@string/line1"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
         <EditText
            android:id="@+id/EditTextLine2"
            android:layout_height="wrap_content"
            android:hint="@string/line2"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
          <EditText
            android:id="@+id/EditTextCity"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
           <EditText
            android:id="@+id/EditTextCountry"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
            <EditText
            android:id="@+id/EditTextZipCode"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <Button
            android:id="@+id/CreateContactButton"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="createContact"
            android:layout_width="fill_parent"></Button>

    </LinearLayout>
</ScrollView>